--- a/src/WhoPage.css
+++ b/src/WhoPage.css
@@ -7,6 +7,7 @@
     gap: 1rem;
     
     /* Box Model */
+    padding-top: 90px;
     padding-block: 2rem;
     height: inherit;
 }
@@ -60,16 +61,16 @@ author {
     font-size: 1.2rem;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 800px) {
     .avartar-img {
         max-width: 210px;
         height: auto;
     }
 }
 
-@media (max-width: 976px) {
+@media (max-width: 1100px) {
     .avartar-img {
         max-width: 100%;
-        height: 196px;
+        height: 180px;
     }
 }
